correccion errores (todavia falta)